--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,18 +26,19 @@
         android:layout_alignParentStart="true"
         android:layout_marginBottom="66dp"
         android:clickable="true"
-        android:text="New to my App? Sign up here"
+        android:text="new_to_my_app_sign_up_here"
         android:textAlignment="center"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        android:focusable="true" />
 
     <Button
         android:id="@+id/signinBtn"
         android:layout_width="match_parent"
         android:layout_height="49dp"
-        android:text="Sign-in"
+        android:text="sign_in"
         android:layout_below="@+id/passwordTxt"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -52,7 +53,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginBottom="47dp"
         android:ems="10"
-        android:hint="enter your email"
+        android:hint="enter_your_email"
         android:inputType="textPersonName" />
 
     <TextView
@@ -60,7 +61,7 @@
         android:layout_width="wrap_content"
         android:layout_height="22dp"
         android:paddingRight="5dp"
-        android:text="E-mail Address"
+        android:text="e_mail_address"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.259"
@@ -72,13 +73,14 @@
         android:layout_marginStart="17dp"
         android:layout_above="@+id/emailTxt"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:paddingEnd="5dp" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Password"
+        android:text="password"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.261"
@@ -98,7 +100,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="35dp"
-        android:text="Ayman's first app :)"
+        android:text="ayman_s_first_app"
         android:textAlignment="center"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -118,9 +120,7 @@
         android:layout_below="@+id/linearLayout"
         android:layout_marginTop="14dp"
         android:ems="10"
-        android:hint="enter password"
+        android:hint="enter_password"
         android:inputType="textPassword" />
-
-    LinearLayout
 
 </RelativeLayout>
