retrive data from firebase
implemt a class to hold the user's info

--- a/app/src/main/res/layout/activity_bottom_nav.xml
+++ b/app/src/main/res/layout/activity_bottom_nav.xml
@@ -19,6 +19,11 @@
 
     </FrameLayout>
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbarT"
+        android:layout_width="match_parent"
+        android:layout_height="?android:attr/actionBarSize" />
+
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bNavigation"
         android:layout_width="match_parent"
