--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/vegowall"
     tools:context=".HomeActivity">
 
     <TextView
@@ -37,7 +38,7 @@
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
-        android:layout_height="29dp"
+        android:layout_height="35dp"
         android:text="English"
         android:textSize="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
