--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -12,7 +12,7 @@
         android:layout_height="?android:attr/actionBarSize" />
 
     <EditText
-        android:id="@+id/usernameTxt"
+        android:id="@+id/confirmPasswordTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -44,7 +44,7 @@
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/usernameTxt"
+        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordTxt"
         app:layout_constraintVertical_bias="0.013" />
 
     <EditText
@@ -108,7 +108,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:src="@drawable/common_google_signin_btn_icon_dark"
-        app:layout_constraintBottom_toTopOf="@+id/usernameTxt"
+        app:layout_constraintBottom_toTopOf="@+id/confirmPasswordTxt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
