--- a/app/src/main/res/layout/activity_bottom_nav.xml
+++ b/app/src/main/res/layout/activity_bottom_nav.xml
@@ -12,6 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/bNavigation"
+        android:layout_below="@+id/toolbarT"
+
 
 
 
@@ -20,6 +22,7 @@
     </FrameLayout>
 
     <android.support.v7.widget.Toolbar
+        android:background="@color/colorvego"
         android:id="@+id/toolbarT"
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize" />
