--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,40 +23,43 @@
         android:layout_width="match_parent"
         android:layout_height="34dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="66dp"
+        android:layout_marginBottom="41dp"
         android:clickable="true"
+        android:focusable="true"
         android:text="new_to_my_app_sign_up_here"
         android:textAlignment="center"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:focusable="true" />
+        app:layout_constraintRight_toRightOf="parent" />
 
     <Button
         android:id="@+id/signinBtn"
-        android:layout_width="170dp"
-        android:layout_height="36dp"
+        android:backgroundTint="@color/Vigo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#ffff"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="154dp"
+        android:layout_marginBottom="82dp"
+        android:layout_marginRight="80dp"
+        android:gravity="center"
         android:text="sign_in" />
 
     <EditText
         android:id="@+id/emailTxt"
-        android:layout_width="170dp"
-        android:ellipsize="start"
-        android:layout_height="36dp"
-        android:layout_alignParentTop="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView10"
         android:layout_centerHorizontal="true"
-        android:gravity="center_horizontal"
-        android:layout_marginTop="184dp"
         android:background="#cccbcb"
+        android:layout_marginRight="80dp"
         android:ems="10"
+        android:gravity="center_horizontal"
         android:hint="enter your email"
-        android:inputType="textEmailAddress" />
+        android:inputType="textEmailAddress"
+        android:paddingBottom="7.5dp"
+        android:paddingTop="7.5dp" />
 
     <TextView
         android:id="@+id/textView9"
@@ -82,17 +85,19 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="206dp"
         android:text="password"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.261"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.453"
-        android:layout_above="@+id/linearLayout"
-        android:layout_alignLeft="@+id/textView9"
-        android:layout_alignStart="@+id/textView9" />
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="25dp" />
 
     <TextView
         android:id="@+id/textView10"
@@ -100,7 +105,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="114dp"
+        android:layout_marginTop="103dp"
         android:text="أو"
         android:textAlignment="center"
         android:textSize="36sp"
@@ -112,13 +117,15 @@
 
     <EditText
         android:id="@+id/passwordTxt"
-        android:layout_width="170dp"
-        android:layout_height="36dp"
-        android:gravity="center_horizontal"
-        android:layout_alignTop="@+id/linearLayout"
-        android:layout_centerHorizontal="true"
+        android:layout_width="match_parent"
+        android:layout_marginRight="80dp"
+        android:paddingBottom="7.5dp"
+        android:paddingTop="7.5dp"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:background="#cccbcb"
         android:ems="10"
+        android:gravity="center_horizontal"
         android:hint="enter_password"
         android:inputType="textPassword" />
 
