--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -76,7 +76,7 @@
             android:ems="10"
             android:gravity="center"
             android:hint="Height"
-            android:inputType="textPersonName"
+            android:inputType="number"
             android:paddingBottom="7.5dp"
             android:paddingTop="7.5dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -164,6 +164,7 @@
             android:ems="10"
             android:gravity="center"
             android:hint="Age"
+            android:imeOptions="actionDone"
             android:inputType="number"
             android:paddingBottom="7.5dp"
             android:paddingTop="7.5dp"
