--- a/app/src/main/res/layout/day_meals.xml
+++ b/app/src/main/res/layout/day_meals.xml
@@ -7,6 +7,7 @@
     android:background="#ededed">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="72dp"
         android:layout_alignParentTop="true"
