--- a/app/src/main/res/layout/activity_bottom_nav.xml
+++ b/app/src/main/res/layout/activity_bottom_nav.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BottomNav">
+    tools:context=".Activity.BottomNav">
 
 
     <FrameLayout
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         app:menu="@menu/menu_nav"
-        android:background="@color/colorAccent"
+        android:background="@color/primary_light"
         android:scrollbars="horizontal"
         ></android.support.design.widget.BottomNavigationView>
 
