--- a/app/src/main/res/layout/day_meals.xml
+++ b/app/src/main/res/layout/day_meals.xml
@@ -25,44 +25,38 @@
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="93dp"
-                app:srcCompat="@android:drawable/btn_dialog"
+                app:srcCompat="@drawable/icons_meal_px"
                 android:layout_alignParentLeft="true"
                 android:layout_marginLeft="93dp" />
 
             <ImageView
                 android:id="@+id/calsIcon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
+                android:layout_width="53dp"
+                android:layout_height="50dp"
                 android:layout_centerVertical="true"
-                android:layout_marginEnd="138dp"
-                app:srcCompat="@android:drawable/btn_dialog"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="138dp" />
+                android:layout_toEndOf="@+id/txtCals"
+                app:srcCompat="@drawable/calories"
+                android:layout_toRightOf="@+id/txtCals" />
 
             <TextView
                 android:id="@+id/txtCount"
                 android:layout_width="72dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
-                android:layout_marginStart="17dp"
+                android:layout_marginEnd="-93dp"
+                android:layout_toStartOf="@+id/calsCount"
                 android:text="يوم 1"
                 android:textColor="@android:color/black"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="17dp" />
+                android:layout_marginRight="-93dp"
+                android:layout_toLeftOf="@+id/calsCount" />
 
             <TextView
                 android:id="@+id/txtCals"
-                android:layout_width="68dp"
+                android:layout_width="52dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="138dp"
+                android:layout_centerInParent="true"
                 android:text="السعرات"
-                tools:textColor="@android:color/black"
-                android:layout_marginLeft="138dp"
-                android:layout_alignParentLeft="true" />
+                tools:textColor="@android:color/black" />
 
             <ImageView
                 android:id="@+id/dayIcon"
@@ -71,21 +65,21 @@
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="12dp"
-                app:srcCompat="@android:drawable/btn_dialog"
+                app:srcCompat="@drawable/icons_calendar_px_"
                 android:layout_marginRight="12dp"
                 android:layout_alignParentRight="true" />
 
             <TextView
                 android:id="@+id/txtDay"
-                android:layout_width="61dp"
+                android:layout_width="44dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_marginEnd="53dp"
+                android:layout_marginEnd="49dp"
                 android:text="يوم 1"
                 android:textColor="@android:color/black"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="53dp" />
+                android:layout_marginRight="49dp"
+                android:layout_alignParentRight="true" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </RelativeLayout>
