--- a/app/src/main/res/layout/fragment_day_meals.xml
+++ b/app/src/main/res/layout/fragment_day_meals.xml
@@ -5,4 +5,12 @@
     android:gravity="center">
 
 
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:textSize="45dp"
+        android:textAlignment="center"
+        android:text="This is Meal Ingredients Fragment" />
 </RelativeLayout>
