profile update fixing bug (boolean)

--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -4,14 +4,11 @@
     android:background="@android:color/holo_orange_dark">
 
 
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/recyclerView"></android.support.v7.widget.RecyclerView>
 
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Wallet Page"
-        android:textSize="40sp"
-        android:layout_centerInParent="true"
-        />
 </RelativeLayout>
