--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -49,7 +49,8 @@
                 android:onClick="openDrawer"
                 android:paddingTop="2dp"
                 android:src="@drawable/profile_on_top"
-                tools:ignore="OnClick" />
+                tools:ignore="OnClick"
+                android:layout_alignParentLeft="true" />
 
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
