--- a/app/src/main/res/layout/activity_add_new_meal.xml
+++ b/app/src/main/res/layout/activity_add_new_meal.xml
@@ -7,17 +7,16 @@
     tools:context=".Activity.DayMealsActivity">
 
 
-
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbarid"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="162dp"
         android:elevation="0dp"
         android:gravity="center">
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:padding="10dp"
             android:src="@drawable/header" />
 
