--- a/app/src/main/res/layout/fragment_add_meal_detailes.xml
+++ b/app/src/main/res/layout/fragment_add_meal_detailes.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
@@ -11,17 +11,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:background="#ededed"
         android:orientation="vertical"
-        android:background="#ededed">
+        android:layout_alignParentLeft="true">
 
         <android.support.v7.widget.CardView
-            android:layout_width="351dp"
+            android:layout_width="match_parent"
             android:layout_height="38dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="17dp"
-            android:layout_marginStart="17dp"
+            android:layout_marginLeft="35dp"
+            android:layout_marginRight="35dp"
             android:layout_marginTop="17dp">
 
             <RelativeLayout
@@ -30,24 +30,22 @@
 
                 <EditText
                     android:id="@+id/mealName"
-                    android:layout_width="317dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
                     android:ems="10"
                     android:inputType="textPersonName"
-                    android:text="Meal name" />
+                    android:hint="Meal name" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
-            android:layout_width="351dp"
+            android:layout_width="match_parent"
             android:layout_height="38dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="17dp"
-            android:layout_marginStart="17dp"
+            android:layout_marginLeft="35dp"
+            android:layout_marginRight="35dp"
             android:layout_marginTop="15dp">
 
             <RelativeLayout
@@ -59,7 +57,6 @@
                     android:id="@+id/textView8"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
                     android:paddingTop="10dp"
                     android:text="مكونات الوجبة"
@@ -68,13 +65,11 @@
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
-            android:layout_width="351dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="17dp"
-            android:layout_marginStart="17dp"
+            android:layout_marginLeft="35dp"
+            android:layout_marginRight="35dp"
             android:layout_marginTop="5dp">
 
             <RelativeLayout
@@ -110,15 +105,41 @@
             </RelativeLayout>
         </android.support.v7.widget.CardView>
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="213dp"
+            android:layout_marginBottom="45dp">
 
         </android.support.v7.widget.RecyclerView>
+
+            <Button
+                android:id="@+id/addNewTypeBtn"
+                android:layout_width="116dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginBottom="34dp"
+                android:text="اضف صنف"
+                android:layout_alignParentRight="true" />
+
+            <Button
+                android:id="@+id/saveBtn"
+                android:layout_width="116dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:text="حفظ" />
+
+        </RelativeLayout>
 
 
     </LinearLayout>
 
-</ScrollView>
+</RelativeLayout>
